Add task-list endpoint
